@@ -329,13 +329,13 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14,   "__16F871",   { "pic16f871",   "p16f871",   "16f871"   }, 0x871f, 1, 4, 0x213f,   { 0x800, 0x20ff },     { 0x2007, 0x2007 },     "16f871_g.lkr"       },
   { PROC_CLASS_PIC14,   "__16F872",   { "pic16f872",   "p16f872",   "16f872"   }, 0x872f, 1, 4, 0x213f,   { 0x800, 0x20ff },     { 0x2007, 0x2007 },     "16f872_g.lkr"       },
   { PROC_CLASS_PIC14,   "__16F873",   { "pic16f873",   "p16f873",   "16f873"   }, 0x873f, 2, 4, 0x217f,   { 0x1000, 0x20ff },    { 0x2007, 0x2007 },     "16f873_g.lkr"       },
-  { PROC_CLASS_PIC14,   "__16F873A",  { "pic16f873a",  "p16f873a",  "16f873a"  }, 0x873a, 2, 4, 0xfff,    { -1, -1 },            { 0x2007, 0x2007 },     "16f873a_g.lkr"      },
+  { PROC_CLASS_PIC14,   "__16F873A",  { "pic16f873a",  "p16f873a",  "16f873a"  }, 0x873a, 2, 4, 0x217f,   { 0x1000, 0x20ff },    { 0x2007, 0x2007 },     "16f873a_g.lkr"      },
   { PROC_CLASS_PIC14,   "__16F874",   { "pic16f874",   "p16f874",   "16f874"   }, 0x874f, 2, 4, 0x217f,   { 0x1000, 0x20ff },    { 0x2007, 0x2007 },     "16f874_g.lkr"       },
-  { PROC_CLASS_PIC14,   "__16F874A",  { "pic16f874a",  "p16f874a",  "16f874a"  }, 0x874a, 2, 4, 0xfff,    { -1, -1 },            { 0x2007, 0x2007 },     "16f874a_g.lkr"      },
+  { PROC_CLASS_PIC14,   "__16F874A",  { "pic16f874a",  "p16f874a",  "16f874a"  }, 0x874a, 2, 4, 0x217f,   { 0x1000, 0x20ff },    { 0x2007, 0x2007 },     "16f874a_g.lkr"      },
   { PROC_CLASS_PIC14,   "__16F876",   { "pic16f876",   "p16f876",   "16f876"   }, 0x876f, 4, 4, 0x21ff,   { 0x2000, 0x20ff },    { 0x2007, 0x2007 },     "16f876_g.lkr"       },
-  { PROC_CLASS_PIC14,   "__16F876A",  { "pic16f876a",  "p16f876a",  "16f876a"  }, 0x876a, 4, 4, 0x1fff,   { -1, -1 },            { 0x2007, 0x2007 },     "16f876a_g.lkr"      },
+  { PROC_CLASS_PIC14,   "__16F876A",  { "pic16f876a",  "p16f876a",  "16f876a"  }, 0x876a, 4, 4, 0x21ff,   { 0x2000, 0x20ff },    { 0x2007, 0x2007 },     "16f876a_g.lkr"      },
   { PROC_CLASS_PIC14,   "__16F877",   { "pic16f877",   "p16f877",   "16f877"   }, 0x877f, 4, 4, 0x21ff,   { 0x2000, 0x20ff },    { 0x2007, 0x2007 },     "16f877_g.lkr"       },
-  { PROC_CLASS_PIC14,   "__16F877A",  { "pic16f877a",  "p16f877a",  "16f877a"  }, 0x877a, 4, 4, 0x1fff,   { -1, -1 },            { 0x2007, 0x2007 },     "16f877a_g.lkr"      },
+  { PROC_CLASS_PIC14,   "__16F877A",  { "pic16f877a",  "p16f877a",  "16f877a"  }, 0x877a, 4, 4, 0x21ff,   { 0x2000, 0x20ff },    { 0x2007, 0x2007 },     "16f877a_g.lkr"      },
   { PROC_CLASS_PIC14,   "__16F88",    { "pic16f88",    "p16f88",    "16f88"    }, 0x688f, 2, 4, 0x21ff,   { 0x1000, 0x20ff },    { 0x2007, 0x2008 },     "16f88_g.lkr"        },
   { PROC_CLASS_PIC14,   "__16F882",   { "pic16f882",   "p16f882",   "16f882"   }, 0x882f, 1, 4, 0x21ff,   { 0x800, 0x20ff },     { 0x2007, 0x2008 },     "16f882_g.lkr"       },
   { PROC_CLASS_PIC14,   "__16F883",   { "pic16f883",   "p16f883",   "16f883"   }, 0x883f, 2, 4, 0x21ff,   { 0x1000, 0x20ff },    { 0x2007, 0x2008 },     "16f883_g.lkr"       },
